Fix missing Patient resource generation